--- a/MurphyH&TPage.css
+++ b/MurphyH&TPage.css
@@ -1,10 +1,20 @@
-nav {
+/*logo styles*/
+div.logo img {
+  position: absolute;
+  z-index: 11;
+  top: 1265px; 
+  left: 150px;
+  background: transparent;
+}
+
+  /*nav styles*/
+  nav {
   height: 75px;
-    background: #004080;
-    position:fixed;
-    z-index:10;
-    width:100%;
-    top:0;
+  background: #004080;
+  position:relative;
+  z-index:10;
+  width:100%;
+  top:0px;
 
 }
 nav ul {
@@ -25,39 +35,8 @@ nav ul li a {
   a .li:hover {
   background-color: #e5ebf2;
 }
-/*truck page*/
-.truckSpecs {
-  display: block;
-  background-color:#e5ebf2;
-  padding-left: 200px;
-  margin-right: 1000px;
-  margin-left: 50px;
-  margin-top: -300px;
-  }
-  .truckSpecs2 {
-    display: block;
-    background-color:#e5ebf2;
-    padding-left: 200px;
-    margin-right: 1000px;
-    margin-left: 50px;
-    margin-top: -300px;
-    }
 
-div.runner {
-  margin: auto;
-  width: 60%;
-  padding-left: 250px;
-}
-div.tacoma {
-  margin: auto;
-  width: 60%;
-  padding-left: 300px;
-}
-div.tundra {
-    margin: auto;
-    width: 60%;
-    padding-left: 300px;
-}
+
 /*carousel caption styles */
 .carousel-caption3 {
   position: absolute;
@@ -93,43 +72,43 @@ div.tundra {
 		1px 1px 0 #000;
 
 }
-/*dealer info*/
+/*info styles*/
 .dealerInfo {
-  font-size: 24px;
-  height: 480px;
-  width: 750px;
-  position:absolute;
-  float:left;
-  margin-left: 60px;
-  z-index: -1;
-  margin-top: 40px;
+font-size: 24px;
+height: 480px;
+width: 750px;
+position:absolute;
+float:left;
+margin-left: 60px;
+z-index: -1;
+margin-top: 40px;
 }
 .serviceInfo {
-  margin-left: 930px;
-  margin-top: 700px;
-  font-size: 24px;
-  height: 480px;
-  width: 750px;
-  z-index: -1;
-  position: relative;
+margin-left: 930px;
+margin-top: 700px;
+font-size: 24px;
+height: 480px;
+width: 750px;
+z-index: -1;
+position: relative;
 }
 .dealerCom {
-  font-size: 24px;
-  height: 480px;
-  width: 750px;
-  position:absolute;
-  float:left;
-  margin-left: 60px;
-  z-index: -1;
-  margin-top: 140px;
+font-size: 24px;
+height: 480px;
+width: 750px;
+position:absolute;
+float:left;
+margin-left: 60px;
+z-index: -1;
+margin-top: 140px;
 }
 
 /*main page pic styles*/
 .pic1 {
-    padding-left: 1000px;
-    float: right;
-    margin-right: 50px;
-    margin-top: 60px;
+padding-left: 1000px;
+float: right;
+margin-right: 50px;
+margin-top: 60px;
 }
 .pic2 {
 position:absolute;
@@ -140,22 +119,22 @@ margin-top: 700px;
 }
 
 .pic3 {
-  padding-left: 1000px;
-  float: right;
-  margin-right: 50px;
-  margin-top: 140px;
+padding-left: 1000px;
+float: right;
+margin-right: 50px;
+margin-top: 140px;
 }
   /*footer styles*/
   .footer {
-    height: 75px;
-   margin-top:1000px;
-   width: 100%;
-   background-color: #004080;
-   color: white;
-   text-align: center;
-   z-index: +1;
+height: 75px;
+margin-top:1000px;
+width: 100%;
+background-color: #004080;
+color: white;
+text-align: center;
+z-index: +1;
 }
 .p1 {
-    font-size: 24px;
-    padding-top: 20px;
+font-size: 20px;
+padding-top: 25px;
 }
